# uq

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  flake.nix
.github/workflows/: ci.yml
client/: .gitignore  package-lock.json  package.json  tsconfig.json
client/src/: index.ts  logger.ts
docs/: architecture.md
drafts/: TODO.md  passport_demo.html
proto/uq/v1/: uq.proto
server/: Cargo.toml  build.rs
server/migrations/: 20250825120000_uq_initial.sql
server/src/: api.rs  db.rs  lib.rs
server/tests/: integration_test.rs
