[package]
name = "uq"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
prost = "0.14"
pbjson = "0.8"
connectrpc-axum = "*"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"

[build-dependencies]
connectrpc-axum-build = "*"
