[package]
name = "uq"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
prost = "0.14"
pbjson = "0.8"
connectrpc-axum = "*"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4.31", features = ["serde"] }
serde_json = "1.0"
bs58 = "0.5.0"

[build-dependencies]
connectrpc-axum-build = "*"

[dev-dependencies]
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3.10.1"


